--- a/index.html
+++ b/index.html
@@ -1,13 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ferdus Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Shah Rukh Khan</span> World!</h1>
+            <h3>Actor and Film Producer</h3>
+            <p>You might have saw him in the bollywood movies. He is great actor and also a great human being. He is
+                known
+                as the king of bollywood for his great perfomance in the bollywood industry. And he is always there to
+                help
+                poor
+                people. And he is also a biggest movie producer. He has his own film production.</p>
+            <a class="link-button" target="_blank"
+                href="https://www.linkedin.com/signup/cold-join?trk=guest_homepage-basic_join-cta">HIRE
+                ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/SRK-pic.png" alt=" a picture of SRK">
+        </div>
+    </section>
 </body>
+
 </html>
