--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
             <img src="images/SRK-pic.png" alt=" a picture of SRK">
         </div>
     </section>
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="images/my-bg2.png" alt="a picture of SRK">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a actor and a producer</h3>
+            <p>Im already a biggest superstar in bollywood. Im dominating the whole bollywood. I have worked hard for
+                it. That's why im here right now. My hardwork and unconditional dedication took me where im today and
+                made me who i am. Hard works never goes in vain. Work hard and you will get pay for it.</p>
+            <a class="link-button" target="_blank"
+                href="https://www.linkedin.com/signup/cold-join?trk=guest_homepage-basic_join-cta">Download Resume</a>
+        </div>
+    </section>
 </body>
 
 </html>
